# AdventOfCode

./: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
2023/src/: template.txt
2023/src/template/: mod.rs
2023/src/template/commands/: read.rs
2024/: README.md  day1.go  go.mod  main.go
2024/days/: day1.go  day2.go  day3.go  day4.go  day5.go
2024/utils/: utils.go
advent/: .gitignore  Cargo.toml
advent/.cargo/: config.toml
advent/data/: adv5_test.2txt
advent/src/: advent_day_five.rs  advent_day_four.rs  advent_day_one.rs  advent_day_three.rs  advent_day_two.rs  main.rs
advent/src/template/: aoc_cli.rs  mod.rs
advent/src/template/commands/: scaffold.rs
day1/: index.ts  part2.ts
src/: lib.rs  main.rs  template.txt
